CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Asuka CXX)

ADD_COMPILE_OPTIONS(-g)
ADD_COMPILE_OPTIONS(-Wall)
ADD_COMPILE_OPTIONS(-Werror)
ADD_COMPILE_OPTIONS(-std=c++14)

SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_CXX_FLAGS_DEBUG "-O0")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNODEBUG")
SET(CMAKE_INSTALL_PREFIX ".")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

#INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

ADD_SUBDIRECTORY(src/net)
ADD_SUBDIRECTORY(src/util)

ADD_EXECUTABLE(unit_test unit_test.cpp)
TARGET_LINK_LIBRARIES(unit_test asuka_net asuka_util)

INSTALL(TARGETS unit_test DESTINATION ${EXECUTABLE_OUTPUT_DIR})

